<resources>
    <!-- database constant values -->
    <string name="app_name">Inventory_App</string>
    <string name="name">name</string>
    <string name="supplier_name">supplier_name</string>
    <string name="supplier_phone">supplier_phone</string>
    <string name="price">price</string>
    <string name="quantity">quantity</string>


    <!-- strings for testing -->
    <string name="add_test_data_item">Add mock data item</string>
    <string name="delete_test_data">Delete all mock data</string>
    <string name="there_is_nothing_here_to_see">There is nothing here to see!</string>
    <string name="add_an_item">Add an item to start the inventory list!</string>
    <string name="add_item">Add an item</string>
    <string name="edit_item">Edit an item</string>

    <!-- editor strings -->
    <string name="editor_insert_item_failed">Your insertion has failed</string>
    <string name="editor_insert_item_success">Your insertion was successful!</string>

    <!-- text view labels -->
    <string name="sale">SALE</string>
    <string name="quantity_heading">"Quantity: "</string>
    <string name="generic_item">Generic Item</string>
    <string name="supplier_co">Supplier Co</string>
    <string name="generic_phone">888-800-1234</string>
    <string name="discard_changes">Discard changes and leave?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="rows_deleted">rows deleted from the inventory database</string>
    <string name="item_completed">item completed</string>
    <string name="delete">delete</string>
    <string name="delete_confirmation">Confirm delete of item?</string>
    <string name="cancel">Cancel</string>
    <string name="error_delete">Error deleting item</string>
    <string name="item_deleted">Item deleted</string>
    <string name="delete_this_item">Delete this item</string>
    <string name="item_name2">Item name:</string>
    <string name="item_price">Item price:</string>
    <string name="item_quantity">Item quantity:</string>
    <string name="dash">-</string>
    <string name="plus">+</string>
    <string name="supplier_title">Supplier:</string>
    <string name="supplier_phone_title">Supplier phone:</string>
    <string name="call_in_new_order">Call in new order</string>
    <string name="dollar_sign">$</string>

</resources>
