<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_insert_test_data"
        android:title="@string/add_test_data_item"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_test_entries"
        android:title="@string/delete_test_data"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item_completed"
        android:title="@string/item_completed"
        android:icon="@drawable/ic_check_white_48dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete_this_item"
        app:showAsAction="never" />
</menu>