<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Item name:  "
            android:textSize="24dp"
            />

        <EditText
            android:id="@+id/edit_item_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Item price:  "
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/edit_item_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/price" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Item quantity:  "
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/edit_item_quantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/quantity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Supplier:  "
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/edit_item_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/supplier_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Supplier phone:  "
            android:textSize="24dp"/>

        <EditText
            android:id="@+id/edit_supplier_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/supplier_phone" />
    </LinearLayout>
</LinearLayout>


